docs(interview): Java 系整改前两批 — 立整改规范,JVM/Java基础重构,事实修正
- CONTRIBUTING 新增「存量内容整改规范」6 条(章=主题/拆 docsify 外壳/版本口径/地图=目录等)
- JVM.md 试点:按主题重组四章,删自引用残段,新增运行时数据区/GC 三算法/类加载五阶段/调优方法论四节
- Java基础.md:六主题章重组,升级 BIO-NIO-AIO 与异常处理,补 serialVersionUID 与反序列化安全
- 事实修正:String JDK9+ byte[]、Valhalla 未落地、fastjson→Jackson/fastjson2、JDK9+ 无独立 JRE、
  虚拟线程 pinning 补 JDK24 JEP491、Scoped Values 补 JDK25 定稿、BigDecimal 三追问
- 知识点索引同步 6 条,TODO 登记整改批次并勾选已完成 5 项

AI-Generated-By: Claude Code 2.1.205 / claude-fable-5